[tool.poetry]
name = "plasnet"
version = "0.2.1"
description = "Clustering, visualising and exploring plasmid networks"
authors = ["Leandro Lima <leandro@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leoisl/plasnet"
repository = "https://github.com/leoisl/plasnet"
packages = [{include = "plasnet"}]
keywords = ["Plasmids", "Networks", "Graphs", "Clustering", "Visualisation", "Exploration"]

[tool.poetry.scripts]
plasnet = 'plasnet.plasnet_main:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
networkx = "^3.2"
click = "^8.1.7"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
